tests/src/frontend/typechecking/invalid/strict_upper_bound_help_2.sk
fun no(n: Int): ?String {
  result = None();
  if (n > 0) {
    !result = Some("Pass\n")
  };
  result
}
